# sodalink-model

./: ChangeLog  Makefile  README.md  _config.yml  example-model.yaml  index.md  notes.md  setup.cfg  sodalink-model.yaml
about/: mapping-neo4j.md  mapping-rdf.md
contrib/: class_extensions.yaml  closures.yaml  core.yaml  go.yaml  monarch.yaml  taxon.yaml  translator.yaml
guidelines/: README.md  curating-the-model.md  faq.md  maintaining-the-model.md  understanding-the-model.md  using-the-modeling-language.md  working-with-the-model.md
java/: CsolinkModel.java
notebooks/: loader_test.ipynb  schemaloader.ipynb
registry/: soda_context.yaml
script/: predicate_review.py
sodalink/: __init__.py  model.py
tests/: test_pythongen.py  test_sodalink_model.py
