[metadata]
name = sodalink_model
description = 'A high level datamodel of computer systems ontology entities and associations'
version = 0.0.1
url = https://github.com/csolink/sodalink-model
author = Noel McLoughlin
author-email = noel.mcloughlin@gmail.com
summary = Sodalink Model
home-page = https://csolink.github.io/sodalink-model/docs/
license = CC0 1.0 Universal
python-requires = >=3.7
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Computer Sciences
    Topic :: Scientific/Engineering :: Cso-Informatics
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
keywords =
    Sodalink
    Datamodel
    DCATS

[files]
packages =
    sodalink
